<resources>
    <string name="app_name">Rocket Quiz</string>
    <string name="image_logo">Logo Image</string>
    <string name="login_name">User ID</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Don\'t have an account yet? Register here</string>
    <string name="register_form">Register Form</string>
    <string name="tip_cont_p">Teacher</string>
    <string name="tip_cont_s">Student</string>
    <string name="registerForm_button">Register</string>
    <string name="navdra_open">"Open"</string>
    <string name="navdra_close">"Close"</string>
    <string name="logout">Logout</string>
    <string name="ham_editprofile">Edit profile</string>
    <string name="ham_settings">Settings</string>
    <string name="ham_myprofile">My profile</string>
    <string name="play">Play</string>
    <string name="press_play">Select domain and hit play</string>
    <string name="email">E-mail</string>
    <string name="age">Age</string>
    <string name="seekbartext">You have %1$d years old</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <string name="actualScore">Score: %1$d</string>
    <string name="gameOver_score">Game Over! The right answer was %1$s. Your score is %2$d points.</string>
    <string name="your_best">Your best score is: %1$d</string>
    <string name="new_game">NEW GAME</string>
    <string name="exit">EXIT</string>
    <string name="rating">Rate us</string>
    <string name="rate_us">Please tell us your opinion about us</string>
    <string name="send">Send</string>
    <string name="no">No</string>
    <string name="thx">Thank you!</string>
    <string name="apply_settings">Settings applied</string>
    <string name="set_theme">Dark Theme</string>
    <string name="music">Music</string>
    <string name="vibration">Vibration</string>
    <string name="language">Language</string>
    <string name="apply">Apply</string>
    <string name="logo">Logo</string>
    <string name="tw_nume">Profile name</string>
    <string name="tw_email">Email</string>
    <string name="tw_telefon">Phone number</string>
    <string name="scoredpoints">You scored: 0 points</string>
    <string name="avatar">Avatar</string>
    <string name="about">About</string>
    <string name="termeni_tv">Terms of use</string>
    <string name="aboutus_tv">About Us</string>
    <string name="contact_tv">Contact</string>
    <string name="description">Description</string>
    <string name="new_image">New image</string>
    <string name="save_csv">Save log CSV</string>
    <string name="success">CSV: Success</string>
    <string name="reports">Reports</string>
    <string name="report_1">Report 1 (Log file)</string>
    <string name="deleteAcc">Delete account</string>
    <string name="seeMap">See us on map</string>
    <string name="clearLog">Clear Log</string>
    <string name="report_2">Report 2 (Mails)</string>
    <string name="report_chart">Top -> Chart report</string>
    <string name="saveText">Save to txt</string>

    <string name="title_activity_maps">Map</string>
    <string name="textview1">Dumitrescu Daniel</string>
    <string name="textview2">Cretu Leonard</string>
    <string name="textview3">Cozma Cristian</string>
    <string name="FAQ">tw_faq</string>
    <string name="tw_faq">FAQ</string>
    <string name="tw_cozma">Cozma Cristian</string>
    <string name="tw_sarpe1">Una dintre cele mai mari slăbiciuni ale omenirii este frecvenţa cu care se foloseşte cuvântul „imposibil”.</string>
    <string name="tw_leo">Cretu Leonard</string>
    <string name="tw_cap1">Nu-l poți învăța nimic pe omul matur, dar îl poți ajuta să găsească răspunsul în el însuși.</string>
    <string name="tw_dani">Dumitrescu Daniel</string>
    <string name="tw_dani1">Oamenii se împart în două categorii: unii caută și nu găsesc, alții găsesc și nu sunt mulțumiți.</string>
    <string name="pick_day">Select your birth date (click here)</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm">Confirm</string>
    <string name="goOnline">Go Online</string>
    <string name="title_activity_maps_ct">Map</string>
    <string name="title_activity_map_online">Map</string>

</resources>
