<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/myprofile"
        android:title="@string/ham_myprofile"
        android:icon="@drawable/ic_person_black_24dp">

    </item>

    <item
        android:id="@+id/editprofile"
        android:title="@string/ham_editprofile"
        android:icon="@drawable/ic_edit_black_24dp">
    </item>

    <item
        android:id="@+id/rating"
        android:title="@string/rating"
        android:icon="@drawable/ic_stars_black_24dp">
    </item>

    <item
        android:id="@+id/settings"
        android:title="@string/ham_settings"
        android:icon="@drawable/ic_settings_black_24dp">
    </item>

    <item
        android:id="@+id/about"
        android:title="@string/about"
        android:icon="@drawable/ic_developer_mode_black_24dp"
        >
    </item>

    <item
        android:id="@+id/goonline"
        android:title="@string/goOnline"
        android:icon="@mipmap/ic_ononline">
    </item>

    <item
        android:id="@+id/reports"
        android:title="@string/reports"
        android:icon="@drawable/ic_chartchart">
    </item>

    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_exit_to_app_black_24dp">
    </item>


</menu>