<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".registerActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_alignEnd="@+id/et_mail"
        android:layout_alignParentTop="true"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="0dp"
        android:fontFamily="casual"
        android:text="@string/register_form"
        android:textSize="27sp" />


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="112dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_teacher"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:text="@string/tip_cont_p" />

        <RadioButton
            android:id="@+id/rb_student"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tip_cont_s" />
    </RadioGroup>

    <EditText
        android:id="@+id/et_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="84dp"
        android:layout_marginTop="166dp"
        android:layout_marginEnd="85dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="84dp"
        android:layout_marginTop="210dp"
        android:layout_marginEnd="85dp"
        android:ems="10"
        android:hint="@string/login_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_username"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="82dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="84dp"
        android:ems="10"
        android:hint="@string/login_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="38dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="registerFormClick"
        android:text="@string/registerForm_button" />

    <RelativeLayout
        android:layout_width="279dp"
        android:layout_height="74dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="53dp"
        android:layout_marginTop="325dp">

        <SeekBar
            android:id="@+id/seekBar_varsta"
            android:layout_width="228dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:max="80"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="62dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="128dp"
            android:layout_marginTop="1dp"
            android:text="@string/age"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tv_seekbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/seekBar_varsta"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</RelativeLayout>