<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MyProfile">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="129dp"
        android:layout_height="29dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="72dp"
        android:text="@string/tw_nume"
        android:textColor="@color/colorAccent"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textSize="18sp" />

    <TextView
        android:id="@+id/tv_mail"
        android:layout_width="138dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"

        android:layout_marginBottom="8dp"
        android:text="@string/tw_email"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.213"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="164dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"

        android:text="@string/scoredpoints"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_mail" />

    <RadioGroup
        android:layout_width="229dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"

        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_score">

        <RadioButton
            android:id="@+id/rb_student"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:textColor="@color/colorAccent"
            android:text="@string/tip_cont_s"
            tools:layout_editor_absoluteX="218dp"
            tools:layout_editor_absoluteY="388dp" />

        <RadioButton
            android:id="@+id/rb_teacher"
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:textColor="@color/colorAccent"
            android:text="@string/tip_cont_p"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="390dp" />
    </RadioGroup>

    <ImageView
    android:id="@+id/iv_Profile"
    android:layout_width="205dp"
    android:layout_height="140dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:contentDescription="@string/avatar"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.049"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/avatar" />

    <Button
        android:id="@+id/newImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:onClick="imageClick"
        android:text="@string/new_image"
        app:layout_constraintStart_toEndOf="@+id/iv_Profile"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>