<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".Settings">


    <Switch
        android:id="@+id/switchTheme"
        android:layout_width="353dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:gravity="start"
        android:text="@string/set_theme"
        android:textColor="@color/color_indigolight"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/cb_Music"
        android:layout_width="110dp"
        android:layout_height="35dp"
        android:textColor="@color/color_indigo"
        android:layout_marginStart="52dp"
        android:layout_marginTop="56dp"
        android:text="@string/music"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchTheme" />

    <CheckBox
        android:id="@+id/cb_Vibration"
        android:layout_width="110dp"
        android:layout_height="35dp"
        android:textColor="@color/color_indigo"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="52dp"
        android:text="@string/vibration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchTheme" />

    <Spinner
        android:id="@+id/spinnerLanguage"
        android:layout_width="296dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.388"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Language" />

    <TextView
        android:id="@+id/tv_Language"
        android:layout_width="96dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/color_indigo"
        android:text="@string/language"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchTheme" />

    <Button
        android:id="@+id/btn_Apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:text="@string/apply"
        android:background="@color/DarkViolet"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="applyClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerLanguage" />

    <Button
        android:id="@+id/button"
        android:layout_width="132dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/DarkViolet"
        android:onClick="saveCsv"
        android:text="@string/save_csv"
        app:layout_constraintBottom_toTopOf="@+id/tv_Language"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchTheme"
        app:layout_constraintVertical_bias="0.045" />


</android.support.constraint.ConstraintLayout>