<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="@drawable/gradient"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="23dp"
        android:contentDescription="@string/image_logo"
        app:srcCompat="@drawable/rocket_logo" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:drawableStart="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/login_name"
        android:inputType="text"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="164dp"
        android:drawableStart="@drawable/ic_password"
        android:ems="10"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:autofillHints="" />

    <android.support.v7.widget.CardView
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="89dp"
        app:cardBackgroundColor="@color/color_cyan"
        app:cardCornerRadius="25dp"

        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="buttonClick">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login_button"
                android:textSize="21sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="49dp"
        android:onClick="registerClick"
        android:text="@string/register_button"
        android:textSize="15sp" />
</RelativeLayout>