<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/dl"
    >


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient"
        tools:context=".MainActivity">

            <Spinner
                android:id="@+id/domainSpinner"
                android:layout_width="363dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="7dp"
                android:visibility="visible"
                android:spinnerMode="dropdown"
                android:focusable="true"
                android:textSize="20sp"
                />


        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="136dp"
            android:contentDescription="@string/play"
            android:onClick="playHit"
            android:theme="@android:style/MediaButton.Play"
            app:srcCompat="@android:drawable/ic_media_play" />

        <TextView
            android:id="@+id/tw_doNothing"
            android:layout_width="261dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="76dp"
            android:text="@string/press_play"
            android:textIsSelectable="false"
            android:textSize="18sp"
            android:textStyle="italic"
            android:theme="@style/Base.Widget.AppCompat.DropDownItem.Spinner" />

        <TextView
            android:id="@+id/yourBest"
            android:layout_width="146dp"
            android:layout_height="83dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="126dp"
            android:layout_marginEnd="112dp"
            android:layout_marginBottom="215dp"
            android:text="@string/your_best" />

        <ImageView
            android:id="@+id/quizTime"
            android:layout_width="205dp"
            android:layout_height="140dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="95dp"
            android:layout_marginTop="325dp"
            android:layout_marginEnd="84dp"
            android:contentDescription="@string/avatar" />
    </RelativeLayout>
    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/navigation_menu">

    </android.support.design.widget.NavigationView>



</android.support.v4.widget.DrawerLayout>